@@ -2224,15 +2224,6 @@
       </component>
     </version>
   </module>
-  <module name="gtkdial">
-    <version release="gnome-1.4-extras">
-      <component name="gtkdial" dir="gnome-i18n">
-	<podir dir="extra-po/gtkdial"/>
-	<potname name="gtkdial.pot"/>
-	<branch name="HEAD"/>
-      </component>
-    </version>
-  </module>
   <module name="gtkhtml">
     <version release="gnome-1.4-core">
       <component name="gtkhtml" dir="gtkhtml">
@@ -2370,15 +2361,6 @@
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
-      </component>
-    </version>
-  </module>
-  <module name="gwvedit">
-    <version release="gnome-1.4-extras">
-      <component name="gwvedit" dir="gnome-i18n">
-	<podir dir="extra-po/gwvedit"/>
-	<potname name="gwvedit.pot"/>
-	<branch name="HEAD"/>
       </component>
     </version>
   </module>
