@@ -1,5 +1,10 @@
 2003-02-20  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed gtkdial and gwvedit from
+	gnome-i18n.
+
+2003-02-20  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Removed gnapster from gnome-i18n.
 
 2003-02-20  Christian Rose  <menthos@menthos.com>
